theme/static/css/hydroshare_core.css
/* ... */
.navbar-nav li#search .search-box {
	position: absolute;
	right: 0;
	bottom: -70px;
	width: 250px;
	padding: 10px;
	background: #eaeaea;
	background: rgba(0, 0, 0, 0.65);
	display: none;
}
.navbar-nav li#search i.margin-2 {
	margin-left: 2px;
}

/* ===== Pagination ===== */

.pagination > .active > a,
.pagination > .active > span,
.pagination > .active > a:hover,
.pagination > .active > span:hover,
.pagination > .active > a:focus,
.pagination > .active > span:focus {
  background-color: #00B4FF;
  border-color: #00B4FF;
}

/* Helper Classes */

.top-zero {
	margin-top: 0;
}
.bottom-15 {
	margin-bottom: 15px;
}
.ui-icon {
	color: #666;
}
.tab-1 {
	margin-right: 15px;
}
.tab-2 {
	margin-right: 30px;
}
.tab-3 {
	margin-right: 45px;
}
.tab-3 {
	margin-right: 60px;
}

/* Text colors */

.text-green {
	color: #72a53b;
}
.text-blue {
	color: #00B4FF;
}
.text-red {
	color: #E74C3C;
}
.text-turquoise {
	color: #1ABC9C;
}
.text-amethyst {
	color: #9B59B6;
}

/* Background colors */

.bg-green {
	background-color: #72a53b;
}
.bg-blue {
	background-color: #00B4FF;
}
.bg-red {
	background-color: #E74C3C;
}
.bg-turquoise {
	background-color: #1ABC9C;
}
.bg-amethyst {
	background-color: #9B59B6;
}

/* ===== Scroll to Top ===== */

.scrolltotop {
	height: 48px;
	width: 48px;
	border-color: #999;
	border: 1px solid rgba(0, 0, 0, 0.3);
	color: #999;
	color: rgba(0, 0, 0, 0.3);
	font-size: 18px;
	line-height: 38px;
	border-radius: 3px;
	text-align: center;
}


/* ===== Resource UI changes ===== */
html, body{
    height:100%;
}

.file-icon{
    margin-right: 5px;
    font-size: 28px;
    color: #8c8c8c;
    float:left;
    top: 6px;
}

table.table-plain {
    margin-bottom: 10px;
    width:100%;
}

table.table-plain tr:hover{
    background:#EFEFEF;
}

.tab-elements{
    border:0;
}

.tab-elements > .panel-tabs > .nav-tabs{
    margin-bottom: 0;
    border:0;
}

.panel-tabs > .nav-tabs > li > a{
    color:#555;
    -webkit-border-radius: 4px 4px 0 0;
    -moz-border-radius: 4px 4px 0 0;
    border-radius: 4px 4px 0 0;
    -webkit-box-shadow: inset 0 1px 0 #ffffff;
    -moz-box-shadow: inset 0 1px 0 #ffffff;
    box-shadow: inset 0 1px 0 #ffffff;
}
.tab-elements > .tabs-body{
    max-height: 400px;
    border: 1px solid #ddd;
    padding: 10px;
    overflow: auto;
}

.panel-tabs table>tbody>tr>th{
    border:0;
}

.division-title {
    clear:left;
    font-size: 20px;
    font-weight: 500;
    margin-left: 7px;

}

.page-title{
    font-weight: 500;
    margin: 30px 0px;
    margin-top: 0;
}

.label-file-name{
    font-weight: bold;
}

.label-file-size{
    font-size:12px;
    margin-bottom: 0;
}

.table-plain > tbody > tr{
    border-bottom: 1px solid #ddd;
}

body > .container{
    min-height: calc(100% - 277px);
    padding-top: 20px;
}

.icon-button {
    font-size: 16px;
    float: right;
    margin-left: 12px;
    width:14px;
    color: #898989;
    cursor: pointer;
    align-items: baseline;
    text-align: center;
    padding: 0;
    border: 0;
    border-image-source: none;
    border-image-slice: 100%;
    border-image-width: 100%;
    border-image-outset: 0;
    border-image-repeat: stretch;
    background-color: transparent;
    box-sizing: inherit;
}

.icon-button:hover {
    color: #000;
}

.custom-btn-toolbar{
    display: block;
    height: 14px;
    /*border-bottom: 1px solid #ddd;*/
    /*padding: 30px;*/
    /*padding-top: 10px;*/
    /*background: #EAEAEA;*/
    /*margin: -20px;*/
    /*margin-bottom: 0;*/
}

.abstract{
    line-height: 2;
    font-size: 16px;
}

.button-label{
    font-family: Lato, sans-serif;
}

.btn-remove{
    color:#d9534f;
}

.btn-edit, .btn-share{
    color: #428BD2;
}

.btn-download{
    color:#428bca;
}

.content-block{
    margin-bottom:30px;
    display: table;
}
.citation-label {
    float:left;
    font-weight: bold;
}

.citation-text {
    display: inline-block;
    float: left;
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    margin-left:10px;
    width:90%;
}

.rights-text, .rights-url{
    font-style:italic;
}

.tag-list {
    margin: 0;
    list-style: none;
    padding: 10px 10px 5px 10px !important;
}

.tag {
    display: inline-block;
    margin-bottom: 4px;
    color: #111111;
    background-color: #f6f6f6;
    padding: 1px 10px;
    border: 1px solid #dddddd;
    -webkit-border-radius: 15px;
    -moz-border-radius: 15px;
    border-radius: 15px;
    -webkit-box-shadow: inset 0 1px 0 #ffffff;
    -moz-box-shadow: inset 0 1px 0 #ffffff;
    box-shadow: inset 0 1px 0 #ffffff;
    /*cursor:pointer;*/
}

.tag-list li {
    display: inline-block;
    margin-right: 5px;
}

a.tag:hover {
    text-decoration: none;
    cursor:default;
    /*color: #fff;*/
    /*background-color: #30778d;*/
    /*border: 1px solid #235767;*/
    /*-webkit-box-shadow: inset 0 1px 0 #3d97b3;*/
    /*-moz-box-shadow: inset 0 1px 0 #3d97b3;*/
    /*box-shadow: inset 0 1px 0 #3d97b3;*/
}

.user-thumbnail{
    border: 1px solid #DDD;
    border-radius: 3px;
    height: 170px;
    margin: 5px;
    display: inline-block;
    float: left;
    padding: 10px;
    font-size: 12px;
    -webkit-box-shadow: inset 0 1px 0 #ffffff;
    -moz-box-shadow: inset 0 1px 0 #ffffff;
    box-shadow: inset 0 1px 0 #ffffff;
    box-shadow: 1px 1px 8px #DFDFDF;
    color:#555;
}

.table-container {
    max-height: 300px;
    overflow: auto;
    margin-bottom: 20px;
    border: 1px solid #ddd;
    padding: 5px 10px;
}

.custom-well{
    min-height: 20px;
    padding: 19px;
    margin-bottom: 20px;
    border: 1px solid #e3e3e3;
    border-radius: 4px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
    box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
}

.user-thumbnail strong{
    margin-right:10px;
}

.user-thumbnail:last-child{
    margin-bottom: 20px;
}

.user-thumbnail > .caption{
    float:left;
}

img.profile-picture {
    float: left;
    height: 150px;
    width: 150px;
    border: 0;
    margin-right:10px;
    background-color:#ddd;
}
/* ... */

